[tool.poetry]
name = "lettpattern"
version = "0.1.0"
description = ""
authors = ["Sihan A"]
readme = "docs/README.md"
packages = [{ include = "template", from = "./src" }]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.5.31"
pymdown-extensions = "^10.9"
binarytree = "^6.5.1"
mkdocs-git-revision-date-localized-plugin = "^1.2.7"
sortedcontainers = "^2.4.0"
pandas = "^2.2.3"
notebook = "^7.2.1"
mkdocs-exclude = "^1.0.2"
mkdocs-static-i18n = "^1.3.0"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.9.2"
pyarrow = "^19.0.1"
fastparquet = "^2024.11.0"
networkx = "^3.3"
pre-commit = "^3.8.0"
black = "^24.8.0"
flake8 = "^7.1.1"
pylint = "^3.2.6"
graphviz = "^0.20.3"
prompt-toolkit = "^3.0.50"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
