[project]
name = "leetpattern"
version = "0.2.0"
description = ""
authors = [{ name = "Sihan A" }]
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.5.31",
    "pymdown-extensions>=10.9",
    "binarytree>=6.5.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.7",
    "sortedcontainers>=2.4.0",
    "pandas>=2.2.3",
    "notebook>=7.2.1",
    "mkdocs-exclude>=1.0.2",
    "mkdocs-static-i18n>=1.3.0",
    "typer>=0.17.3",
    "mkdocs-monorepo-plugin>=1.1.2",
]

[project.scripts]
lpn = "leetpattern.core.commands:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leetpattern"]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.9.2",
    "pyarrow>=19.0.1",
    "fastparquet>=2024.11.0",
    "networkx>=3.3",
    "pre-commit>=3.8.0",
    "black>=24.8.0",
    "flake8>=7.1.1",
    "pylint>=3.2.6",
    "graphviz>=0.20.3",
    "prompt-toolkit>=3.0.50",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "leetpattern/solutions/python"]
python_files = ["test_*.py", "*_test.py", "[0-9][0-9][0-9][0-9]_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=leetpattern/solutions/python",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-config=pyproject.toml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["leetpattern/solutions/python"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
