[project]
name = "leetpattern"
version = "0.3.0"
description = ""
authors = [{ name = "Sihan A" }]
readme = "docs/README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs-material>=9.7.6",
    "pymdown-extensions>=10.21.2",
    "binarytree>=6.5.1",
    "sortedcontainers>=2.4.0",
    "pandas>=3.0.2",
    "mkdocs-monorepo-plugin>=1.1.2",
    "typer>=0.24.1",
    "tqdm>=4.67.3",
]

[project.scripts]
lpn = "leetpattern.core.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["leetpattern"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pyarrow>=23.0.1",
    "fastparquet>=2026.3.0",
    "networkx>=3.6.1",
    "pre-commit>=4.5.1",
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pylint>=4.0.5",
    "graphviz>=0.21",
    "prompt-toolkit>=3.0.52",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "leetpattern/python"]
python_files = ["test_*.py", "*_test.py", "[0-9][0-9][0-9][0-9]_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=leetpattern/python",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-config=pyproject.toml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["leetpattern/python"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
